# rag-ai-service

./: .gitignore  app.py  config.py  feedback.py  ingest.py  new.py  pyproject.toml  requirements.txt
pages/: monitoring_dashborad.py
